fix text contrast issues

--- a/styles/home-styles.css
+++ b/styles/home-styles.css
@@ -184,9 +184,9 @@ body::-webkit-scrollbar-thumb:hover {
     font-size: 1.2vw;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 500;
-    background-color: rgb(218, 165, 32);
-    color: whitesmoke;
+    color: rgb(255, 255, 255);
     border-radius: calc(0.1 * 2vw);
+    background-color: rgb(192, 140, 7);
     border: 0.15vw solid rgb(229, 197, 15);
     margin-bottom: 0.25vw;
 }
@@ -194,7 +194,7 @@ body::-webkit-scrollbar-thumb:hover {
 .start-button:hover,
 .start-button:focus {
     cursor: pointer;
-    background-color: rgb(234, 179, 40);
+    filter: brightness(1.1);
     font-size: 1.175vw;
     border-width: 0.18vw;
 }
@@ -224,7 +224,7 @@ body::-webkit-scrollbar-thumb:hover {
 }
 
 .precalc-gen {
-    background-color: #4c4c7f;
+    background-color: #575796;
     border-color: rgb(67, 43, 221);
 }
 
