--- a/styles/pg-ui-styles.css
+++ b/styles/pg-ui-styles.css
@@ -171,10 +171,10 @@
     font-size: 1.7vw;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: rgb(249, 247, 247);
-    background-color: rgb(65, 168, 68);
+    background-color: rgb(30, 107, 81);
     font-weight: 500;
     border-radius: calc(0.07 * 3.8vw);
-    border: 0.17vw solid rgb(22, 91, 3);
+    border: 0.17vw solid rgb(15, 59, 45);
     margin-top: 4vw;
     margin-bottom: 30px;
 }
@@ -186,8 +186,8 @@
 
 #generate-button:hover {
     cursor: pointer;
-    border: 0.2vw solid rgb(22, 91, 3);
-    background-color: rgb(74, 181, 77);
+    filter: brightness(115%);
+    border-width: 0.2vw;
     font-size: 1.675vw;
 }
 
@@ -340,12 +340,10 @@
         font-size: 2.2vw;
     }
 
-    #generate-button:hover,
-    #generate-button:focus {
-        background-color: rgb(65, 168, 68);
-        border-width: 0.25vw;
-        font-size: 2.1vw;
-
+    #generate-button:hover {
+        border-width: 0.275vw;
+        font-size: 2.075vw;
+        filter: brightness(115%);
     }
 
     #generator-name {
@@ -369,6 +367,12 @@
     .export-image-wrapper:hover::before,
     .export-image-wrapper:hover::after {
         opacity: 0;
+    }
+
+    #generate-button:hover {
+        border-width: 0.25vw;
+        font-size: 2.1vw;
+        filter: brightness(100%);
     }
 }
 
@@ -497,11 +501,10 @@
         border-width: 0.6vw;
     }
 
-    #generate-button:hover,
-    #generate-button:focus {
+    #generate-button:hover {
         font-size: 5vw;
         border-width: 0.6vw;
-        background-color: rgb(65, 168, 68);
+        filter: brightness(100%);
         cursor: default;
     }
 
